--- a/pair.html
+++ b/pair.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>𝐒𝐔𝐋𝐀-𝐌𝐃 PAIR CODE</title>
+  <title>SANDEEP-X-MD PAIR CODE</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
